--- a/index.css
+++ b/index.css
@@ -119,9 +119,6 @@ body{
     width: 37%;
   
     }
-  
-  
-  
     hr{
     color: #D1525A;
     width: 70%;
@@ -268,18 +265,20 @@ body{
   
     }
     #descripcionCiber{
+      position: absolute;
       color: white;
       font-size: 16px;
-      height: 32%;
-      margin-top: 0px;
+      height: 13%;
+      margin-top: 52px;
       text-align: center;
-      width: 33%;
+      width: 18%;
       padding-top: 20px;
       background: #D1525A;
       opacity: 85%;
       border: #D1525A 1px solid;
       border-top-left-radius: 20%;
       border-bottom-right-radius: 20%;
+      left: 48%;
     }
     #ImgCiber{
     position: absolute;
@@ -288,7 +287,7 @@ body{
     }
     #btnCiber1Abrir
     {
-    margin-left: 5.7%;
+    margin-left: -0.5%;
     }
     #btnCiber2Abrir{
       margin-left: 14.5%;
