--- a/mobileIndex.css
+++ b/mobileIndex.css
@@ -1,4 +1,21 @@
- /*pantallas de 310*/
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
+
+  @font-face {
+  font-family: BeVietnam-Lightimport;
+  src: url("Fonts/BeVietnam-Light.ttf");
+  }
+
+  @font-face {
+  font-family: BeVietnam-Regularimport;
+  src: url("Fonts/BeVietnam-Regular.ttf");
+  }
+
+  @font-face {
+  font-family: BeVietnam-Boldimport;
+  src: url("Fonts/BeVietnamPro-Bold.ttf");
+  }
+/*pantallas de 310*/
 @media only screen and (min-width:370px) and (max-width:411px){
         .secciones{
             width: 100vw;
@@ -749,7 +766,7 @@
         background: none;
         opacity: 1;
         border: none;
-        margin-top: -168%;
+        margin-top: -153%;
         border-top-left-radius: none;
         border-bottom-right-radius: none;
         text-align: initial;
@@ -864,7 +881,7 @@
         border: none;
         width: 100%;
         margin-left: 0%;
-        margin-top: -133%;
+        margin-top: -131%;
         padding-top: 0;
         border-top-left-radius: 0;
         border-top-right-radius: 0;
@@ -923,7 +940,7 @@
             border: none;
             width: 100%;
             margin-left: 0;
-            margin-top: -150%;
+            margin-top: -139%;
             padding-top: 20px;
             border-top-left-radius: 0;
             border-top-right-radius: 0;
@@ -936,8 +953,8 @@
         }
         #ImagenOutsourcing{
             margin-left: 7%;
-            margin-top: 136%;
-            width: 85%;
+            margin-top: 125%;
+            width: 81%;
         }
         .btnOut{
            margin-left: -4%;
@@ -1083,8 +1100,6 @@
          .btn{ margin-right: 41px; }
 
     }
-        
-
  /*pantallas de 411*/   
 @media only screen and (min-width:411px) and (max-width:768px){
     .secciones{
@@ -1624,4 +1639,579 @@
         .formFooter{ margin-left: -60px; 
             margin-top: 34px; }
          .btn{ margin-right: 41px; }
+}
+@media only screen and (width:1140){
+    
+body{
+    background-color: #000C33;
+  }
+
+  nav{
+    z-index: 2;
+  }
+  .navbar-brand{
+    font-weight: bold;
+    }
+    .sectionBanner{
+      margin-top: 24%;
+    }
+    .ImgPrincipal{
+        margin-left: 50%;
+        width: 56%;
+        position: absolute;
+        top: -6%;
+    }
+    .tituloBlancoPrincipal
+    {
+        font-family: BeVietnam-Boldimport;
+        position: absolute;
+        color: white;
+        top: 30%;
+        left: 1%;
+        font-size: 112px;
+    }
+    .tituloRojoPrincipal
+    {
+        font-family: BeVietnam-Boldimport;
+        position: absolute;
+        color: rgb(209, 82, 90);
+        top: 45%;
+        left: 21.1%;
+        font-size: 112px;
+    }
+    .FrasePrincipal{
+        color: white;
+        letter-spacing: 10px;
+        position: absolute;
+        top: 64%;
+        left: 24%;
+    }
+    .barraBlanca{
+      background-color: white;
+      position: absolute;
+      width: 100vw;
+      bottom: 0px;
+      height: 29%;
+    }
+
+    .descripcionPrincipal1
+    {
+        position: absolute;
+        font-size: 21px;
+        border-right: 0.5px solid rgba(108, 107, 109, 0.44);
+        left: 7%;
+        bottom: 45px;
+        color: black;
+        width: 27%;
+        height: 103px;
+    }
+    .descripcionPrincipal2
+    {
+        position: absolute;
+        font-size: 21px;
+        border-right: 0.5px solid rgba(108, 107, 109, 0.44);
+        left: 38%;
+        bottom: 46px;
+        color: black;
+        width: 29%;
+        height: 103px;
+        padding-right: 32px;
+    }
+    .descripcionPrincipal3
+    {
+        position: absolute;
+        font-size: 21px;
+        right: 10%;
+        bottom: 54px;
+        color: black;
+        width: 21%;
+        height: 103px;
+    }
+
+    .secciones{
+    width: 100vw;
+    height: 100vh;
+    margin-top: 30px;
+
+    }
+  
+    h3{
+    color:white;
+    }
+  
+    .ImagenesServicios{
+    width: 37%;
+  
+    }
+    hr{
+    color: #D1525A;
+    width: 70%;
+    height: 3px;  
+    border-bottom:#D1525A 1px solid;
+    opacity: 1;
+    }
+    .lista{
+    margin-top: 20%;
+    }
+  
+  
+    /*titulos de todas los componentes*/
+    /*STAFFING*/
+    .ImgStaffing{
+      position: absolute;
+      width: 40%;
+      left: 47%;
+      }
+    #tituloStaffing
+    {   
+         font-weight: bold;
+        font-family: BeVietnam-Boldimport;
+        font-size: 54px;
+        color: #FFF;
+        display: inline;
+    }
+    #tituloStaffingRojo{
+        font-weight: bold;
+        font-family: BeVietnam-Boldimport;
+        font-size: 54px;
+        color: #D1525A;
+        display: inline;
+    }
+    #fraseStaffing{
+    color: white;
+    font-size: 18px;
+    margin-top: 30px;
+    }
+    #btnStaffing{
+    border-color: #D1525A;
+    background: none;
+    color: #FFF;
+    width: 240px;
+    height: 53px;
+    margin-top: 30px;
+    }
+     /*PARTNER*/
+
+     #tituloPartner
+     {
+      font-weight: lighter;
+      font-family: BeVietnam-Lightimport;
+      font-size: 30px;
+      color: #FFF;
+      display: inline;
+      letter-spacing: 10px;
+      margin-left: 6%;
+     }
+     #tituloPartner2
+     {
+      font-weight: lighter;
+      font-family: BeVietnam-Lightimport;
+      font-size: 30px;
+      color: #FFF;
+      display: inline;
+      letter-spacing: 10px;
+     }
+     #tituloPartnergRojo{
+      font-family: BeVietnam-Boldimport;
+      font-size: 30px;
+      color: #D1525A;
+      display: inline;
+      letter-spacing: 10px;
+     }
+     .imgPartner1{
+      width: 55%;
+      margin-top: 20%;
+      margin-left: -18px;
+     }
+     .imgPartner2{
+      width: 120%;
+      margin-top: 50%;
+      margin-left: -50px;
+     }
+     .imgPartner3{
+      width: 60%;
+      margin-top: 30%;
+      margin-left: 43%;
+     }
+     #frasePartner1{
+       font-weight: lighter;
+      color: white;
+      font-size: 19px;
+      text-align: initial;
+      letter-spacing: 1px;
+     
+     }
+     #frasePartner2{
+      font-weight: lighter;
+      color: white;
+      font-size: 19px;
+      margin-top: 0px;
+      text-align: end;
+     }
+
+  
+    /*CiberSeguridad*/
+    #fraseCiber{
+    position: absolute; 
+    font-weight: lighter;
+    font-size: 13.7px;
+    margin-top: 90px;
+    color: white; 
+    letter-spacing: 2px;
+    }
+    #fraseCiber2{
+    position: absolute; 
+    font-weight: lighter;
+    font-size: 13.7px;
+    margin-top: 110px;
+    color: white; 
+    letter-spacing: 7px;
+    }
+    #tituloCiberRojo{
+    font-family: BeVietnam-Boldimport;
+    margin-left: -0.5%;
+    font-size: 64px; 
+    color: #D1525A; 
+    display: inline; 
+    }
+    #tituloCiber{
+    font-family: BeVietnam-Boldimport;
+    font-size: 64px; 
+    color: #FFF; 
+    display: inline;
+    }
+    #listaCiber{
+    color:white;
+    display: inline;
+    font-size: 24px;
+  
+    }
+    #descripcionCiber{
+        position: absolute;
+        color: white;
+        font-size: 16px;
+        height: 15%;
+        margin-top: 149px;
+        text-align: center;
+        width: 24%;
+        padding-top: 20px;
+        background: #D1525A;
+        opacity: 85%;
+        border: #D1525A 1px solid;
+        border-top-left-radius: 20%;
+        border-bottom-right-radius: 20%;
+        left: 42%;
+    }
+    #ImgCiber{
+    position: absolute;
+    left: 54%;
+    width: 34.5%;
+    }
+    #btnCiber1Abrir
+    {
+    margin-left: -0.5%;
+    }
+    #btnCiber2Abrir{
+      margin-left: 14.5%;
+    }
+    #btnCiber3Abrir{
+      margin-left: 43.5%;
+    }
+    #btnCiber4Abrir{
+    margin-left: 44.5%;
+    }
+
+  
+    /*Desarrollo*/
+    #fraseDesarrollo{
+      position: absolute;
+      font-weight: lighter;
+      font-size: 13.7px;
+      color: white;
+      letter-spacing: 7px;
+      margin-top: 80px;
+      margin-left: 5%;
+    }
+    #tituloDesarrolloRojo{
+      font-family: BeVietnam-Boldimport;
+      margin-left: 10%;
+      font-size: 64px;
+      color: #D1525A;
+      display: inline;
+      margin-top: 60%;
+    }
+    #tituloDesarrollo{
+      font-family: BeVietnam-Boldimport;
+      font-size: 64px;
+      color: #FFF;
+      display: inline;
+    }
+    #ubiListaDesarrollo{
+      margin-top: 10%;
+      margin-left: 10%;
+    }
+    #listaDesarrollo
+    {
+    color:white;
+    display: inline;
+    font-size: 24px;
+    }
+    #imgDesarrollo
+    { 
+      width: 50%;
+      margin-top: -42%;
+      margin-left: -62%;
+    }
+    #descripcionDesarrollo
+    {
+      height: 23.7%;
+      color: white;
+      font-size: 15px;
+      text-align: center;
+      background: #D1525A;
+      opacity: 85%;
+      border: #D1525A 1px solid;
+      width: 30%;
+      margin-left: 24%;
+      margin-top: -34%;
+      padding-top: 19px;
+      border-top-left-radius: 20%;
+      border-top-right-radius: 20%;
+      border-bottom-right-radius: 20%;
+    }
+    #desarrolloSection
+    {
+    margin-top: 13%;
+    }
+    .hrDesarrollo
+    {
+    color: #D1525A;
+    width: 90%;
+    height: 3px;  
+    border-bottom:#D1525A 1px solid;
+    opacity: 1;
+    }
+  
+    #btnDesarrollo1Abrir{
+    margin-left: 17%;
+    }
+    #btnDesarrollo2Abrir{
+      margin-left: 68%;
+    }
+    #btnDesarrollo3Abrir{
+      margin-left: 49%;
+    }
+    #btnDesarrollo4Abrir{
+      margin-left: 33%;
+    }
+    /*OUTSOURCING*/
+
+    #fraseOutsourcing
+    {
+      font-size: 13.7px;
+      position: absolute;
+      margin-top: 81px;
+      color: white;
+      letter-spacing: 7px;
+      margin-left: 3%;
+    }
+    
+    #tituloOutsourcingRojo
+    {
+      font-family: BeVietnam-Boldimport;
+      margin-left: 2%;
+      font-size: 64px;
+      color: #D1525A;
+      display: inline;
+  }
+    #tituloOutsourcing
+    {
+      font-family: BeVietnam-Boldimport;
+      font-size: 64px;
+      color: #FFF;
+      display: inline;
+    }
+    #descripcionOutsourcing{
+        height: 19%;
+        color: white;
+        font-size: 15px;
+        text-align: center;
+        background: #D1525A;
+        opacity: 85%;
+        border: #D1525A 1px solid;
+        width: 60%;
+        margin-left: 46%;
+        margin-top: 6%;
+        padding-top: 20px;
+        border-top-left-radius: 20%;
+        border-top-right-radius: 20%;
+        border-bottom-right-radius: 20%;
+    }
+    #listaOutsourcing{
+    color:white;
+    display: inline;
+    font-size: 24px;
+    }
+    #ImagenOutsourcing{
+        margin-left: 5%;
+        margin-top: -159px;
+        width: 91%;
+    }
+    .btnOut{
+    margin-left: 0.5%;
+    }
+    #listaOut{
+    margin-top: 10%;
+    }
+    /*Sponsor*/
+    #tituloSponsor{
+    font-family: BeVietnam-Boldimport;
+    margin-top: 9%;
+    color: white;
+    letter-spacing: 10px;
+    text-align: center;
+    margin-left: -80px;
+    }
+    .Sponsor{
+    height: 50vh;
+    }
+    .imgSponsor{
+    display: inline;
+    width: 23%;
+    margin-top: 90px;
+  
+    }
+    #inhaus
+    {
+    margin-left: 20%;
+    }
+    #thebridge
+    {
+    width: 30%;
+    }
+    /*Clientes*/
+    .clientes{
+      height: 50vh;
+      background-color:#C4C4C4 ;
+    
+      }
+      #tituloClientes{
+      color:#000C33 ;
+      letter-spacing: 10px;
+      text-align: center;
+      padding-top: 40px;
+      }
+      .ImgMarcas{
+      display: inline;
+      width: 145px;
+      opacity: 0.5;
+      margin-left: 5.8%;
+      margin-top: 30px;
+      }
+      #imgPhilips{
+        width: 270px;
+        margin-top: -2%;
+        margin-left: 30%;    
+      }
+      #imgCoca{
+        width: 255px;
+        margin-top: 13%;
+      }
+   /*PREGUNTAS FRECUENTES*/
+   #PreguntasSection{
+    margin-top: 14%;
+   }
+   #frasePregunta{
+    position: absolute;
+    margin-top: 2%;
+    color: white;
+    letter-spacing: 6px;
+    }
+    #listaPregunta{
+    color:white;
+    display: inline;
+    font-size: 24px;
+    } 
+    #btnPRegunta1Abrir{
+      margin-left: 29.5%;
+      }
+      #btnPRegunta2Abrir{
+        margin-left: 23.1%;
+        }
+    #btnPRegunta3Abrir{
+      margin-left: 30.5%;
+    }
+    #btnPRegunta4Abrir{
+    margin-left: 11.5%;
+    }
+    #btnPRegunta5Abrir{
+     margin-left: 16%;
+     }
+  #descripcionPregunta{
+    font-family: BeVietnam-Boldimport;
+    margin-left: 37%;
+    color: white;
+    font-size: 28px;
+    text-align: center;
+    margin-top: 80%;
+  }
+  .mail1{
+    position: absolute;
+    text-decoration: none;
+    color: white;
+    text-align: center;
+    font-size: 28px;
+    left: 65%;
+    margin-top: 1.9%;
+  }
+  .mail2{
+    position: absolute;
+    text-decoration: none;
+    color: white;
+    text-align: center;
+    font-size: 28px;
+    left: 66%;
+    margin-top: -1%;
+    margin-left: 1%;
+  }
+  #ImgPregunta{
+    position: absolute;
+    left: 54%;
+    margin-top: 49px;
+    width: 34.5%;
+  }
+    
+    /*footer*/
+    #divFooter{
+    width: 100%; 
+    background-color: #FFF; 
+    height: 200%;
+    }
+    #footer{
+    margin-left: 10%;
+    width: 85%; 
+    padding-top: 100px;
+    }
+    /*whatsapp*/
+    .btnWsp{
+    position:fixed;
+    width:60px;
+    height:60px;
+    line-height: 55px;
+    bottom:25px;
+    right:25px;
+    background:#25d366;
+    color:#FFF;
+    border-radius:50px;
+    text-align:center;
+    font-size:35px;
+    box-shadow: 0px 1px 10px rgba(0,0,0,0.3);
+    z-index:100;
+    transition: all 300ms ease;
+    }
+    .btnWsp:hover{
+    background:#FFF ;
+    color:#20ba5a;
+    }
+
 }
